@@ -1,4 +1,5 @@
 import milk.measures.measures
+import milk.measures.curves
 import numpy as np
 import numpy
 from milk.measures import accuracy, waccuracy, bayesian_significance
@@ -50,3 +51,14 @@ def test_confusion_matrix():
 def test_significance():
     assert np.allclose(.5, [bayesian_significance(1024,i,i) for i in xrange(0, 1025, 3)])
 
+
+def test_roc():
+    np.random.seed(3)
+    for i in xrange(4):
+        labels = np.repeat([False,True], 50)
+        response = labels + np.random.random(100)*i
+        P,R = milk.measures.curves.roc(response, labels != 0)
+        assert P.min() >= 0.
+        assert R.min() >= 0.
+        assert P.max() <= 1.
+        assert R.max() <= 1.
