@@ -2,6 +2,7 @@ Version 0.5+
 	* Add subspace projection kNN
 	* Export ``pdist`` in milk namespace
 	* Add Eigen to source distribution
+	* Add measures.curves.roc
 
 Version 0.5 2012-11-05 by luispedro
 	* Add coordinate-descent based LASSO
